# polozi

./: .dockerignore  .gitignore  Dockerfile.web  Taskfile.yml  docker-compose.e2e.yml  docker-compose.yml  nginx.web.conf  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-api.yml  ci-docker.yml  ci-web.yml
apps/api/: .env.example  Cargo.toml  Dockerfile  package.json
apps/api/fixtures/mup/: README.md  gen_migration.py  parse.py  questions.json
apps/api/migrations/: 0001_init.sql  0002_users.sql  0003_mup_questions.sql  0004_admin_2fa.sql
apps/api/src/: auth.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  seed.rs
apps/api/tests/: e2e.rs
apps/app/: .env.example  next.config.ts  package.json
apps/app/app/: layout.tsx  page.tsx
apps/app/components/: account-card.tsx  app-shell.tsx  language-switcher.tsx  question-card.tsx  review-form.tsx  school-card.tsx  states.tsx
apps/app/lib/: api.ts  auth.tsx  format.ts  i18n.ts  settings.tsx  storage.ts  types.ts  use-async.ts
apps/backoffice/: package.json  tsconfig.json
apps/backoffice/app/: globals.css  layout.tsx  page.tsx
apps/backoffice/components/: category-form.tsx  confirm-dialog.tsx  dashboard-shell.tsx  data-state.tsx  page-header.tsx  question-form.tsx  school-form.tsx
apps/backoffice/lib/: api.ts  auth.tsx  types.ts
apps/landing/: next.config.js  package.json
apps/landing/app/: layout.tsx  page.tsx
apps/landing/lib/: i18n.ts  legal-content.ts  locale-context.tsx
apps/web/: package.json
e2e/: .gitignore  global-setup.ts  package.json  playwright.config.ts
e2e/tests/: app-account.spec.ts  backoffice-auth.spec.ts  smoke.spec.ts  urls.ts
(+28 files in other folders)
