[package]
name = "polozi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
# debug-embed: also embed Swagger UI static assets in debug builds
#   (rust-embed skips them in dev by default -> /swagger/ would 404 under `cargo run`)
# vendored: bundle the Swagger UI assets in-crate instead of downloading them
#   with `curl` at build time -> reproducible, no network needed (Docker/CI).
utoipa-swagger-ui = { version = "9", features = ["axum", "debug-embed", "vendored"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
dotenvy = "0.15"
anyhow = "1"
